# sulfur-lang

./: Language.cabal  README.md  SulfurLang.cabal  stack.yaml
examles/: Data.su  Fib.su  Traits.su
src/: AST.hs  Main.hs  Syntax.hs
src/Data/List/: NonEmpty.hs
test/: ASTSpec.hs  SyntaxSpec.hs
