name:                 SulfurLang
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Daniel Mescheder
maintainer:           daniel.mescheder@realimpactanalytics.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  exposed-modules:      AST,
                        Syntax,
                        Data.List.NonEmpty
  extensions:           OverloadedStrings
  build-depends:        base >= 4.8,
                        prelude-extras >= 0.4,
                        parsec,
                        bound,
                        containers,
                        transformers,
                        text
  hs-source-dirs:       src

test-suite spec
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  extensions:           OverloadedStrings
  ghc-options:          -Wall
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base >= 4.8,
                        hspec == 2.*,
                        prelude-extras >= 0.4,
                        parsec,
                        bound,
                        containers,
                        transformers,
                        text,
                        SulfurLang
